adding delete endpoint
